--- a/from_mwt_ds/DataScience/datagen.ipynb
+++ b/from_mwt_ds/DataScience/datagen.ipynb
@@ -5,6 +5,7 @@
    "execution_count": null,
    "source": [
     "from itertools import chain\r\n",
+    "import random\r\n",
     "\r\n",
     "def generate_cb(i, valid = True):\r\n",
     "    import json\r\n",
@@ -13,11 +14,26 @@
     "        \"_label_probability\": 0.5,\r\n",
     "        \"_label_Action\": i % 2 + 1,\r\n",
     "        \"_labelIndex\": i % 2,\r\n",
-    "        \"a\": [i % 2, (i + 1) % 2],\r\n",
-    "        \"c\": {\"f\": 1, '_multi': [{'f': 1}, {'f': 2}]},\r\n",
+    "        \"a\": [(i % 2) + 1, ((i + 1) % 2) + 1],\r\n",
+    "        \"c\": {'shared': {'f':'1'}, '_multi': [{'a': {'f': '1'}}, {'a': {'f': '2'}}]},\r\n",
     "        \"p\": [0.5, 0.5] \r\n",
     "    }\r\n",
     "    return f'{json.dumps(o, separators=(\",\", \":\"))}{\"\" if valid else \"!\"}\\n'\r\n",
+    "\r\n",
+    "\r\n",
+    "def generate_cb_rnd(i, nactions, epsilon):\r\n",
+    "    import json\r\n",
+    "    reward = random.random() < 1 - epsilon if i % nactions == 0 else random.random() < epsilon\r\n",
+    "    o = {\r\n",
+    "        \"_label_cost\": -reward,\r\n",
+    "        \"_label_probability\": 1 / nactions,\r\n",
+    "        \"_label_Action\": (i % nactions) + 1,\r\n",
+    "        \"_labelIndex\": i % nactions,\r\n",
+    "        \"a\": [(i % nactions) + 1] + [a + 1 for a in set(range(nactions)) - set([i % nactions])],\r\n",
+    "        \"c\": {'shared': {'f':'1'}, '_multi': [{'a': {'f': str(i)}} for i in range(nactions)]},\r\n",
+    "        \"p\": [1.0 / nactions]  * nactions\r\n",
+    "    }\r\n",
+    "    return f'{json.dumps(o, separators=(\",\", \":\"))}\\n'\r\n",
     "\r\n",
     "def generate_file(generator, lines, path):\r\n",
     "    with open(path, 'w') as f:\r\n",
@@ -40,58 +56,11 @@
    "source": [
     "generate_file(generate_cb, 10, 'vw_executor/tests/data/cb_0.json')\r\n",
     "generate_file(generate_cb, 11, 'vw_executor/tests/data/cb_1.json')\r\n",
-    "generate_file_with_invalid(10, 'vw_executor/tests/data/cb_invalid.json')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "from vw_executor.vw import Vw\r\n",
-    "from vw_executor.vw_opts import dimension, product\r\n",
-    "import pandas as pd\r\n",
+    "generate_file_with_invalid(10, 'vw_executor/tests/data/cb_invalid.json')\r\n",
     "\r\n",
-    "vw = Vw('vw', '.vw_cache')\r\n",
-    "\r\n",
-    "inputs = [\r\n",
-    "    'vw_executor/tests/data/cb_0.json',\r\n",
-    "    'vw_executor/tests/data/cb_1.json',\r\n",
-    "    'vw_executor/tests/data/cb_invalid.json'\r\n",
-    "    ]\r\n",
-    "\r\n",
-    "opts = pd.DataFrame(product(\r\n",
-    "    dimension('#base', ['--ccb_explore_adf -P 5 --preserve_performance_counters --save_resume --dsjson']),\r\n",
-    "    dimension('--cb_type', ['ips']),\r\n",
-    "))\r\n"
+    "generate_file(lambda i: generate_cb_rnd(i, 8, 0.3), 100, 'vw_executor/tests/data/cb_100_0.json')\r\n",
+    "generate_file(lambda i: generate_cb_rnd(i, 8, 0.3), 100, 'vw_executor/tests/data/cb_100_1.json')"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result = vw._with(reset=True).train(inputs, opts)\r\n",
-    "result"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result.iloc[0]['!Job'][-1].loss_table"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
