sweep_local cleanup

--- a/from_mwt_ds/DataScience/datagen.ipynb
+++ b/from_mwt_ds/DataScience/datagen.ipynb
@@ -21,16 +21,22 @@
     "    return f'{json.dumps(o, separators=(\",\", \":\"))}{\"\" if valid else \"!\"}\\n'\r\n",
     "\r\n",
     "\r\n",
-    "def generate_cb_rnd(i, nactions, epsilon):\r\n",
+    "def generate_cb_rnd(i, biases):\r\n",
     "    import json\r\n",
-    "    reward = random.random() < 1 - epsilon if i % nactions == 0 else random.random() < epsilon\r\n",
+    "    nusers = biases.shape[0]\r\n",
+    "    nactions = biases.shape[1]\r\n",
+    "\r\n",
+    "    user = random.randint(0, nusers - 1)\r\n",
+    "    chosen = random.randint(0, nactions - 1)\r\n",
+    "\r\n",
+    "    reward = int(random.random() < biases[user][chosen])\r\n",
     "    o = {\r\n",
     "        \"_label_cost\": -reward,\r\n",
     "        \"_label_probability\": 1 / nactions,\r\n",
-    "        \"_label_Action\": (i % nactions) + 1,\r\n",
-    "        \"_labelIndex\": i % nactions,\r\n",
-    "        \"a\": [(i % nactions) + 1] + [a + 1 for a in set(range(nactions)) - set([i % nactions])],\r\n",
-    "        \"c\": {'shared': {'f':'1'}, '_multi': [{'a': {'f': str(i)}} for i in range(nactions)]},\r\n",
+    "        \"_label_Action\": chosen + 1,\r\n",
+    "        \"_labelIndex\": chosen,\r\n",
+    "        \"a\": [chosen + 1] + [a + 1 for a in set(range(nactions)) - set([chosen])],\r\n",
+    "        \"c\": {'shared': {'f': str(chosen)}, '_multi': [{'a': {'f': str(i)}} for i in range(nactions)]},\r\n",
     "        \"p\": [1.0 / nactions]  * nactions\r\n",
     "    }\r\n",
     "    return f'{json.dumps(o, separators=(\",\", \":\"))}\\n'\r\n",
@@ -58,9 +64,38 @@
     "generate_file(generate_cb, 11, 'vw_executor/tests/data/cb_1.json')\r\n",
     "generate_file_with_invalid(10, 'vw_executor/tests/data/cb_invalid.json')\r\n",
     "\r\n",
-    "generate_file(lambda i: generate_cb_rnd(i, 8, 0.3), 100, 'vw_executor/tests/data/cb_100_0.json')\r\n",
-    "generate_file(lambda i: generate_cb_rnd(i, 8, 0.3), 100, 'vw_executor/tests/data/cb_100_1.json')"
+    "biases = np.random.rand(4,4)\r\n",
+    "print(biases)\r\n",
+    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, 'vw_executor/tests/data/cb_10000_0.json')\r\n",
+    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, 'vw_executor/tests/data/cb_10000_1.json')"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import numpy as np\r\n",
+    "\r\n",
+    "np.random.rand(3,2).shape[0]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "random.randint(0, 3)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
