--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helpers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -133,16 +140,16 @@
     "    ax = new_ax()\n",
     "    [df[(df['shared_good']==i)][j].rolling(window=100).mean().plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
-    "    plt.legend(loc='best')\n",
+    "    ax.legend(loc='best')\n",
     "    \n",
     "def plot(sim, job, ax):\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    prediction_files = job.outputs['-p']\n",
     "    df = pd.concat([sim.get(), predictions_2_df(prediction_files)], axis=1)\n",
-    "    [df[(df['shared_good']==i)][j].rolling(window=100).mean().plot(\n",
+    "    [(df[(df['shared_good']==i)][j].rolling(window=100).mean() + i * 0.05).plot(\n",
     "        ax=ax, color = colors[j], style=styles[i], label=f'P(chosen={j} | Person={i})') for i in [0,1] for j in [0,1]]\n",
-    "    plt.legend(loc='best')\n",
+    "    ax.legend(loc='best')\n",
     "    \n",
     "def generate_and_visualize(n=10000, swap_after=5000, variance=0, bad_log=0, window=100, ax=None, fig=None):\n",
     "    sim = Simulation(n=n, swap_after=swap_after, variance = variance, bad = 2**bad_log)\n",
@@ -153,7 +160,7 @@
     "    fig.canvas.draw_idle()\n",
     "    \n",
     "def generate_and_learn(n=10000, swap_after=5000, variance=0, bad_log=0, window=100, \n",
-    "                       learning_rate=-20, coin=False, l1=-20, cb_type='ips', extra='', ax=None, fig=None):\n",
+    "                       learning_rate=-20, coin=False, l1=-20, cb_type='ips', interactions='', ignore='', ignore_linear='', ax=None, fig=None):\n",
     "    sim = Simulation(n=n, swap_after=swap_after, variance = variance, bad = 2**bad_log)\n",
     "    ax[0][0].clear()\n",
     "    ax[0][1].clear()\n",
@@ -164,7 +171,9 @@
     "    sim.to_dsjson_file('small.json')\n",
     "\n",
     "    opts = {'#base': '--cb_explore_adf --dsjson --epsilon 0.2',\n",
-    "            '#extra': extra,\n",
+    "            '#0': interactions,\n",
+    "            '#1': ignore,\n",
+    "            '#2': ignore_linear,\n",
     "            '#lr': '--coin' if coin else f'--power_t 0 --learning_rate {2**learning_rate}',\n",
     "            '--l1': 2**l1,\n",
     "            '--cb_type': cb_type\n",
@@ -201,6 +210,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Simulation(n=1000, swap_after=500, variance = 0.1, bad = 2).visualize(window=10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(2, 2, figsize=(10,10))\n",
+    "fig, ax = plt.subplots(2, 2, figsize=(12,7))\n",
     "\n",
     "widget = interactive(\n",
     "    generate_and_learn,\n",
@@ -226,33 +244,18 @@
     "    coin=Checkbox(),\n",
     "    l1=IntSlider(min=-20,max=10, step=1, value=-20),\n",
     "    cb_type=['ips', 'mtr'],\n",
-    "    extra=Text(),\n",
+    "    interactions=['', '-q sa', '-q ab sb', '-q ::'],\n",
+    "    ignore=['', '--ignore b'],\n",
+    "    ignore_linear=['', '--ignore_linear sab'],\n",
     "    ax=fixed(ax),\n",
     "    fig=fixed(fig))\n",
     "\n",
     "data_controls = HBox(widget.children[:4])\n",
     "visualization_controls = HBox(widget.children[4:5])\n",
-    "learning_controls = HBox(widget.children[5:-1])\n",
+    "learning_controls = HBox(widget.children[5:-4])\n",
+    "extra = HBox(widget.children[-4:-1])\n",
     "output = widget.children[-1]\n",
-    "display(VBox([data_controls, visualization_controls, learning_controls, output]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, ax = plt.subplots(2, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax[0]"
+    "display(VBox([data_controls, visualization_controls, learning_controls, extra, output]))"
    ]
   },
   {
