--- a/from_mwt_ds/DataScience/demo.ipynb
+++ b/from_mwt_ds/DataScience/demo.ipynb
@@ -74,7 +74,7 @@
     "            })\n",
     "            for i in range(bad):\n",
     "                self.examples[-1][f'a1_bad_{i}'] = random.random()\n",
-    "            self.examples[-1][f'a2_bad_{i}'] = random.random()\n",
+    "                self.examples[-1][f'a2_bad_{i}'] = random.random()\n",
     "        self.df = pd.DataFrame(self.examples)\n",
     "    \n",
     "    def get(self):\n",
@@ -89,7 +89,7 @@
     "                \"_labelIndex\": int(row['chosen']),\n",
     "                \"a\": [row['chosen'] + 1, (row['chosen'] + 1) % 2 + 1],\n",
     "                \"c\": {'shared': {'f': str(row['shared_good'])},\n",
-    "                    '_multi': [{'a': {'f': str(row['a1_good'])}},\n",
+    "                    '_multi': [{'a': {'f': str(row['a1_good']), 'constant': 1}},\n",
     "                        {'a': {'f': str(row['a2_good'])}}]},\n",
     "                \"p\": [row['prob'], 1 - row['prob']] \n",
     "            }\n",
@@ -160,7 +160,8 @@
     "    fig.canvas.draw_idle()\n",
     "    \n",
     "def generate_and_learn(n=10000, swap_after=5000, variance=0, bad_log=0, window=100, \n",
-    "                       learning_rate=-20, coin=False, l1=-20, cb_type='ips', interactions='', ignore='', ignore_linear='', ax=None, fig=None):\n",
+    "                       learning_rate=-20, coin=False, l1=-20, cb_type='ips', \n",
+    "                       interactions='', ignore='', ignore_linear='', marginals='', ax=None, fig=None):\n",
     "    sim = Simulation(n=n, swap_after=swap_after, variance = variance, bad = 2**bad_log)\n",
     "    ax[0][0].clear()\n",
     "    ax[0][1].clear()\n",
@@ -174,6 +175,7 @@
     "            '#0': interactions,\n",
     "            '#1': ignore,\n",
     "            '#2': ignore_linear,\n",
+    "            '#3': marginals,\n",
     "            '#lr': '--coin' if coin else f'--power_t 0 --learning_rate {2**learning_rate}',\n",
     "            '--l1': 2**l1,\n",
     "            '--cb_type': cb_type\n",
@@ -215,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Simulation(n=1000, swap_after=500, variance = 0.1, bad = 2).visualize(window=10)"
+    "Simulation(n=10000, swap_after=5000, variance = 0, bad = 2).visualize(window=50)"
    ]
   },
   {
@@ -231,6 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import *\n",
+    "\n",
     "fig, ax = plt.subplots(2, 2, figsize=(12,7))\n",
     "\n",
     "widget = interactive(\n",
@@ -247,13 +251,14 @@
     "    interactions=['', '-q sa', '-q ab sb', '-q ::'],\n",
     "    ignore=['', '--ignore b'],\n",
     "    ignore_linear=['', '--ignore_linear sab'],\n",
+    "    marginals=['', '--marginal a'],\n",
     "    ax=fixed(ax),\n",
     "    fig=fixed(fig))\n",
     "\n",
     "data_controls = HBox(widget.children[:4])\n",
     "visualization_controls = HBox(widget.children[4:5])\n",
-    "learning_controls = HBox(widget.children[5:-4])\n",
-    "extra = HBox(widget.children[-4:-1])\n",
+    "learning_controls = HBox(widget.children[5:-5])\n",
+    "extra = HBox(widget.children[-5:-1])\n",
     "output = widget.children[-1]\n",
     "display(VBox([data_controls, visualization_controls, learning_controls, extra, output]))"
    ]
