--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -1,5 +1,181 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initiailize VW executor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "\n",
+    "vw = Vw('vw', '.vw_cache')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = [\n",
+    "    'vw_executor/tests/data/cb_100_0.json',\n",
+    "    'vw_executor/tests/data/cb_100_1.json', \n",
+    "    ]\n",
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define options grid and train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw_opts import Grid\n",
+    "import pandas as pd\n",
+    "\n",
+    "opts = Grid({\n",
+    "    '#base': ['--cb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson'],\n",
+    "    '--cb_type': ['ips', 'mtr']})\n",
+    "opts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, opts)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get access to losses and job artifacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'loss[0]: {result[0].loss}')\n",
+    "print(f'outputs: {result[0].outputs}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pandas wrappers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opts = pd.DataFrame(Grid({\n",
+    "    '#base': ['--ccb_explore_adf -P 10 --preserve_performance_counters --save_resume'],\n",
+    "    '--cb_type': ['ips', 'mtr'],\n",
+    "    '#format': ['', '--dsjson']}))\n",
+    "opts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, opts)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Investigate failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].failed.stdout.raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore metrics "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[result['!Loss'].notnull()].iloc[0]['!Job'].loss_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "[(-r['!Job'].loss_table['loss']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
+  "interpreter": {
+   "hash": "e6d91e144c1e8b75ccdd4259c6213e15c7f5d1d664ef01abea10605a34f365c2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -12,184 +188,13 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.5 64-bit ('base': conda)"
-  },
   "metadata": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   },
-  "interpreter": {
-   "hash": "e6d91e144c1e8b75ccdd4259c6213e15c7f5d1d664ef01abea10605a34f365c2"
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Initiailize VW executor"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "from vw_executor.vw import Vw\r\n",
-    "\r\n",
-    "vw = Vw('vw', '.vw_cache')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Get the data"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "inputs = [\r\n",
-    "    'vw_executor/tests/data/cb_100_0.json',\r\n",
-    "    'vw_executor/tests/data/cb_100_1.json', \r\n",
-    "    ]\r\n",
-    "inputs"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Define options grid and train"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "from vw_executor.vw_opts import dimension, product\r\n",
-    "import pandas as pd\r\n",
-    "\r\n",
-    "opts = product(\r\n",
-    "    dimension('#base', ['--cb_explore_adf -P 10000 --preserve_performance_counters --save_resume --dsjson']),\r\n",
-    "    dimension('--cb_type', ['ips', 'mtr']),\r\n",
-    ")\r\n",
-    "opts"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result = vw.train(inputs, opts)\r\n",
-    "result"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Get access to losses and job artifacts"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "print(f'loss[0]: {result[0].loss}')\r\n",
-    "print(f'outputs: {result[0].outputs}')"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Pandas wrappers"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "opts = pd.DataFrame(product(\r\n",
-    "    dimension('#base', ['--ccb_explore_adf -P 10 --preserve_performance_counters --save_resume']),\r\n",
-    "    dimension('--cb_type', ['ips', 'mtr']),\r\n",
-    "    dimension('#format', ['', '--dsjson'])\r\n",
-    "))\r\n",
-    "opts"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result = vw.train(inputs, opts)\r\n",
-    "result"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Investigate failure"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result[~result['!Loss'].notnull()].iloc[0]['!Job'].failed.stdout.raw()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Explore metrics "
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "result.iloc[1]['!Job'].loss_table"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "import matplotlib.pyplot as plt\r\n",
-    "[(-r['!Job'].loss_table['loss']).plot(label=f\"{r['!Job'].name}\", figsize=(10,6)) for i, r in result[result['!Loss'].notnull()].iterrows()]\r\n",
-    "plt.legend()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  }
- ]
+ "nbformat_minor": 2
 }
