--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from vw_executor.vw import Vw\n",
     "\n",
-    "vw = Vw('vw','.vw_cache1')"
+    "vw = Vw('vw','.vw_cache')"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "        '#base': ['--ccb_explore_adf -P 100 --preserve_performance_counters --save_resume --dsjson --epsilon 0.2'],\n",
     "        '--cb_type': ['ips', 'mtr']\n",
     "    }) * (\n",
-    "        Grid({'--learning_rate': [0.01,0.1], '--power_t': [0]}) + Grid(['--coin'])\n",
+    "        Grid({'--learning_rate': [0.01,0.1], '--power_t': [0]}) + Grid({'#coin': ['--coin']})\n",
     "    ))\n",
     "opts"
    ]
