make vw path optional

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from vw_executor.vw import Vw\n",
     "\n",
-    "vw = Vw('vw', '.vw_cache')"
+    "vw = Vw('.vw_cache')"
    ]
   },
   {
