--- a/from_mwt_ds/DataScience/sweep_local.ipynb
+++ b/from_mwt_ds/DataScience/sweep_local.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from vw_executor.vw import Vw\n",
     "\n",
-    "vw = Vw('vw','.vw_cache')"
+    "vw = Vw('.vw_cache', 'vw')"
    ]
   },
   {
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    'vw_executor/tests/data/cb_1000_0.json',\n",
-    "    'vw_executor/tests/data/cb_1000_1.json', \n",
+    "    'vw_executor/tests/data/cb_100000_0.json',\n",
+    "    'vw_executor/tests/data/cb_100000_1.json', \n",
     "    ]\n",
     "inputs"
    ]
@@ -56,10 +56,10 @@
     "\n",
     "opts = pd.DataFrame(Grid(\n",
     "    {\n",
-    "        '#base': ['--ccb_explore_adf -P 100 --preserve_performance_counters --save_resume --dsjson --epsilon 0.2'],\n",
+    "        '#base': ['--ccb_explore_adf -P 10 --preserve_performance_counters --save_resume --dsjson --epsilon 0.2'],\n",
     "        '--cb_type': ['ips', 'mtr']\n",
     "    }) * (\n",
-    "        Grid({'--learning_rate': [0.01,0.1], '--power_t': [0]}) + Grid({'#coin': ['--coin']})\n",
+    "        Grid({'--learning_rate': range(1,5), '--power_t': [0]}) + Grid({'#coin': ['--coin']})\n",
     "    ))\n",
     "opts"
    ]
