default output value is fixed

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -174,12 +174,12 @@
    "outputs": [],
    "source": [
     "%matplotlib widget \n",
-    "from vw_executor.vw_opts import InteractiveGrid\n",
-    "opts = InteractiveGrid({\n",
+    "from vw_executor.vw_opts import InteractiveGrid as Grid\n",
+    "opts = Grid({\n",
     "    '#base': ['--cb_explore_adf -P 10 --preserve_performance_counters --save_resume --dsjson'],\n",
     "    '--cb_type': ['ips', 'mtr'],\n",
     "    '--learning_rate': [1e-7, 1e-6, 1e-5, 1e-4, 1e-3]})\n",
-    "vw.train(inputs, opts, [])"
+    "vw.train(inputs, opts)"
    ]
   },
   {
