--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -183,11 +183,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get more logging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "from vw_executor.loggers import ConsoleLogger, FileLogger, MultiFileLogger\n",
+    "from vw_executor.handlers import ProgressBars, ArtifactCopy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log to console"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "from vw_executor.loggers import ConsoleLogger\n",
+    "\n",
+    "vw = Vw('.vw_cache',\n",
+    "    loggers = [ConsoleLogger('DEBUG')])\n",
+    "\n",
+    "vw.train(inputs, '--cb_explore_adf --dsjson')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log to file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "from vw_executor.loggers import FileLogger\n",
+    "\n",
+    "vw = Vw('.vw_cache',\n",
+    "    loggers = [FileLogger('log1.txt', 'DEBUG')])\n",
+    "\n",
+    "vw.train(inputs, '--cb_explore_adf --dsjson')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Log to multiple files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "from vw_executor.loggers import FileLogger\n",
+    "\n",
+    "vw = Vw('.vw_cache',\n",
+    "    loggers = [MultiFileLogger('artifacts', 'DEBUG')])\n",
+    "\n",
+    "vw.train(inputs, ['--cb_explore_adf --dsjson --epsilon 0.2', '--cb_explore_adf --dsjson --epsilon 0.3'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Publish artifacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vw_executor.vw import Vw\n",
+    "from vw_executor.handlers import ArtifactCopy\n",
+    "\n",
+    "vw = Vw('.vw_cache',\n",
+    "    handlers = [ArtifactCopy('artifacts', outputs=['-p'])])\n",
+    "\n",
+    "vw.train(inputs, ['--cb_explore_adf --dsjson --epsilon 0.2', '--cb_explore_adf --dsjson --epsilon 0.3'], ['-p'])"
+   ]
   }
  ],
  "metadata": {
