--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -190,17 +190,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from vw_executor.vw import Vw\n",
-    "from vw_executor.loggers import ConsoleLogger, FileLogger, MultiFileLogger\n",
-    "from vw_executor.handlers import ProgressBars, ArtifactCopy"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,7 +228,7 @@
     "from vw_executor.loggers import FileLogger\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
-    "    loggers = [FileLogger('log1.txt', 'DEBUG')])\n",
+    "    loggers = [FileLogger('log.txt', 'DEBUG')])\n",
     "\n",
     "vw.train(inputs, '--cb_explore_adf --dsjson')"
    ]
