--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "from vw_executor.vw import Vw\n",
-    "from vw_executor.loggers import FileLogger\n",
+    "from vw_executor.loggers import MultiFileLogger\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
     "    loggers = [MultiFileLogger('artifacts', 'DEBUG')])\n",
