more getting started examples

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -32,10 +32,47 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    'vw_executor/tests/data/cb_100_0.json',\n",
-    "    'vw_executor/tests/data/cb_100_1.json', \n",
+    "    'vw_executor/tests/data/cb_1000_0.json',\n",
+    "    'vw_executor/tests/data/cb_1000_1.json', \n",
     "    ]\n",
     "inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple vw run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, '--cb_explore_adf --dsjson')\n",
+    "result[1].stdout.raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Options that you probably need for training\n",
+    "--preserve_performance_counters - make all counters preserved between different files <br/>\n",
+    "--save_resume - model that is saved as output after each file processing, has all information required for further learning (not just regressor weights) </br>\n",
+    "-P $some_number    - make progressive loss report every $some_number examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = vw.train(inputs, '--cb_explore_adf --dsjson --preserve_performance_counters --save_resume -P 10')\n",
+    "result[1].stdout.raw"
    ]
   },
   {
@@ -175,10 +212,13 @@
    "source": [
     "%matplotlib widget \n",
     "from vw_executor.vw_opts import InteractiveGrid as Grid\n",
+    "from ipywidgets import FloatLogSlider, FloatSlider\n",
     "opts = Grid({\n",
     "    '#base': ['--cb_explore_adf -P 10 --preserve_performance_counters --save_resume --dsjson'],\n",
     "    '--cb_type': ['ips', 'mtr'],\n",
-    "    '--learning_rate': [1e-7, 1e-6, 1e-5, 1e-4, 1e-3]})\n",
+    "    '--learning_rate': [0.00001, 0.0001, 0.001, 0.01, 0.1, 1]\n",
+    "#    '--learning_rate': FloatLogSlider(min=-10, max=10, base=10, step=1)\n",
+    "    })\n",
     "vw.train(inputs, opts)"
    ]
   },
